# krip-backend-spring

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle  docker-compose.yml  lombok.config  pom.xml
ai/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai/app/: container.py  main.py
ai/app/api/v1/: health.py  router.py
ai/app/config/: setting.py
ai/app/core/: llm_manager.py  logger.py
ai/app/core/ai/menu_ocr/: load.py
ai/app/core/ai/menu_ocr/v1/: model.py
ai/app/core/ai/papago_translator/: load.py
ai/app/core/ai/papago_translator/v1/: model.py
ai/app/core/ai/tour_planner/: __init__.py  load.py
ai/app/core/ai/tour_planner/v2/: category.py  chain_builder.py  data_state.py  graph_orchestrator.py  prompt_manager.py
ai/app/core/instrumentation/: __init__.py  ai.py
ai/app/core/metric/: __init__.py  ai.py
ai/app/domain/menu_ai/dto/: menu_ocr.py
ai/app/domain/menu_ai/router/: __init__.py  menu_ocr.py
ai/app/domain/menu_ai/schema/: menu_ocr.py
ai/app/domain/menu_ai/service/: exception.py  menu_ocr.py
ai/app/domain/tour/router/: __init__.py  build_plan.py
ai/app/domain/tour/schema/: build_plan.py  recommend.py
ai/app/domain/tour/service/: exception.py  recommend.py
ai/app/domain/translation/dto/: translation.py
ai/app/domain/translation/router/: __init__.py  translation.py
ai/app/domain/translation/schema/: translation.py
ai/app/domain/translation/service/: exception.py  translation.py
ai/app/middleware/: auth.py  tracking.py
secrets/: README.md
src/main/resources/: application.yml
(+677 files in other folders)
